Refactor the project strucute, feats: multi schema tenant, superadmin and admin staffs